--- a/ბლოგი/blog.html
+++ b/ბლოგი/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
@@ -27,7 +27,7 @@
             <ul class="inline-block" >
                     <a href="../index.html"><li class="inline-block ">მთავარი</li></a>
                         <a href="../გადაცემები/gada.html"><li class="inline-block ">გადაცემები</li></a>
-                            <a href="#"> <li class="inline-block ">ბლოგი</li></a>
+                            <a href="#"> <li class="inline-block main">ბლოგი</li></a>
                 
             </ul>
 
