--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
@@ -25,7 +25,7 @@
 
 
             <ul class="inline-block" >
-                    <a href="index.html"><li class="inline-block ">მთავარი</li></a>
+                    <a href="index.html"><li class="inline-block main ">მთავარი</li></a>
                         <a href="გადაცემები/gada.html"><li class="inline-block ">გადაცემები</li></a>
                             <a href="ბლოგი/blog.html"> <li class="inline-block ">ბლოგი</li></a>
                 
@@ -34,9 +34,9 @@
             <p class="tran">ქარ/ENG</p>
     </nav>
     <section class="video">
-        <video src="">
+        <iframe width="75.15151515151515%" height="838.489px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        </video>
+        
     </section>
      <p class="qucha">ქუჩის აკადემია Vol. 1 - დავით მაკარიძე - გამოღვიძების ხელოვნება [შესავალი ონეირონავტიკაში]</p>
      <footer class="flex">
