--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -34,7 +34,7 @@
             <p class="tran">ქარ/ENG</p>
     </nav>
 
-<section>
+<section class="flex">
     <nav class="flex reset nav2">
         <ul class="reset">
             <li class="reset">არტარეას სიახლეები</li>
@@ -62,19 +62,52 @@
 
     </nav>
 
-<div class="flex">
-    <div >
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="flex div1">
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
 
-        <iframe width="60px" height="100px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
+    <div class="container flex" > <div>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
+    </div>
+
     </div>
  
     
