--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -34,7 +34,7 @@
             <p class="tran">ქარ/ENG</p>
     </nav>
 
-<section class="flex">
+<section class="flex sec1">
     <nav class="flex reset nav2">
         <ul class="reset">
             <li class="reset">არტარეას სიახლეები</li>
