--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ARTAREA</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
+    
 </head>
 <body>
     <header>
-        <img src="img/Asset 2.png" alt="LOGO ">
+       <a href="index.html"> <img src="img/Asset 2.png" alt="LOGO "></a>
 
     </header>
 
@@ -34,7 +35,7 @@
             <p class="tran">ქარ/ENG</p>
     </nav>
     <section class="video">
-        <iframe width="75.15151515151515%" height="838.489px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="75.15151515151515%" height="600px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         
     </section>
