--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ARTAREA</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="img/Asset 2.png" alt="LOGO ">
+        <a href="../index.html"> <img src="img/Asset 2.png" alt="LOGO "></a>
 
     </header>
 
@@ -63,47 +63,47 @@
     </nav>
 
 <div class="flex div1">
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container flex" > <div>
+    <div class="container " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
