--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
     </section>
      <p class="qucha">ქუჩის აკადემია Vol. 1 - დავით მაკარიძე - გამოღვიძების ხელოვნება [შესავალი ონეირონავტიკაში]</p>
      <footer class="flex">
-         <p>კონტაკტი</p>
+         <a href="კონტაქტი/kont.html">
+         <p>კონტაკტი</p></a>
          <p class="fb">fb <span class="in">in</span></p>
+         <a href="კონტაქტი/kont.html">
          <p>ჩვენ შესახებ</p>
+        </a>
 
      </footer>
 </body>
