--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -122,9 +122,12 @@
     </section>
      <p class="qucha">ქუჩის აკადემია Vol. 1 - დავით მაკარიძე - გამოღვიძების ხელოვნება [შესავალი ონეირონავტიკაში]</p>
      <footer class="flex">
-         <p>კონტაკტი</p>
-         <p class="fb">fb <span class="in">in</span></p>
-         <p>ჩვენ შესახებ</p>
+            <a href="../კონტაქტი/kont.html">
+                <p>კონტაკტი</p></a>
+                <p class="fb">fb <span class="in">in</span></p>
+                <a href="../კონტაქტი/kont.html">
+                <p>ჩვენ შესახებ</p>
+               </a>
 
      </footer>
 </body>
