--- a/კონტაქტი/kont.html
+++ b/კონტაქტი/kont.html
@@ -41,11 +41,11 @@
             <p>ტელეფონი <span class="add"> 2 18 10 38</span></p>
             <p>ელ პოსტა <span class="add"> info@artarea.tv</span></p>
             <p>მისამართი    <span class="add">  დოდო აბაშიძის 10</span></p>
-            <p class="sp"> fb in tw</p>
+            <p class="sp"> fb in Tw</p>
 
         </div>
         <div class="map flex">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d11781.542444947445!2d41.79414895!3d42.419526299999994!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1548804324164" width="800" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d11781.542444947445!2d41.79414895!3d42.419526299999994!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1548804324164" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                 
         </div>
     
