--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ARTAREA</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     
 </head>
@@ -19,7 +19,7 @@
 
     <nav class="flex"  >
         <section >
-            <p class="inline-block search"> ძებნა  </p><i class="material-icons inline-block">search</i>
+            <p class="flex search"> ძებნა  <i class="material-icons inline-block">search</i></p>
         </section>
 
 
