--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -6,7 +6,7 @@
     <title>ARTAREA</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -120,7 +120,7 @@
     <section >
         
     </section>
-     <p class="qucha">ქუჩის აკადემია Vol. 1 - დავით მაკარიძე - გამოღვიძების ხელოვნება [შესავალი ონეირონავტიკაში]</p>
+     
      <footer class="flex">
             <a href="../კონტაქტი/kont.html">
                 <p>კონტაკტი</p></a>
