--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-2/width, initial-scale=1.0">
     <title>ARTAREA</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -43,7 +43,7 @@
      <footer class="flex">
          <a href="კონტაქტი/kont.html">
          <p>კონტაკტი</p></a>
-         <p class="fb">fb <span class="in">in</span></p>
+         <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="instagram.com"><span class="in">in</span> </a></p>
          <a href="კონტაქტი/kont.html">
          <p>ჩვენ შესახებ</p>
         </a>
