--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -18,7 +18,7 @@
 
     <nav class="flex nav1"  >
         <section >
-            <p class="inline-block search"> ძებნა  </p><i class="material-icons inline-block">search</i>
+            <p class="flex search"> ძებნა  <i class="material-icons inline-block">search</i></p>
         </section>
 
 
@@ -33,14 +33,14 @@
 
             <p class="tran">ქარ/ENG</p>
     </nav>
-
+ <section class="glavni">
 <section class="flex sec1">
     <nav class="flex reset nav2">
         <ul class="reset">
             <li class="reset">არტარეას სიახლეები</li>
             <li class="reset">ვიზუალური ხელოვნება</li>
             <li class="reset">მუსიკა</li>
-            <li class="reset"> ლიტერატურა</li>
+            <li class="reset">ლიტერატურა</li>
             <li class="reset">კინო</li>
             <li class="reset">თეატრი</li>
             <li class="reset">არქიტექტურა</li>
@@ -49,8 +49,7 @@
             <li class="reset">განათლება</li>
             <li class="reset">სოციუმი </li>
             <li class="reset">სხვადასხვა </li>
-            <li class="reset"> არქივი</li>
-           
+            <li class="reset">არქივი</li>           
         </ul>
 
 
@@ -63,47 +62,47 @@
     </nav>
 
 <div class="flex div1">
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
-    <div class="container " > 
+    <div class="container1 " > 
         <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
@@ -114,6 +113,7 @@
 
 
 </div>
+</section>
 
 </section>
 
@@ -124,7 +124,8 @@
      <footer class="flex">
             <a href="../კონტაქტი/kont.html">
                 <p>კონტაკტი</p></a>
-                <p class="fb">fb <span class="in">in</span></p>
+                <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="https://www.instagram.com"><span class="in">in</span> </a></p>
+
                 <a href="../კონტაქტი/kont.html">
                 <p>ჩვენ შესახებ</p>
                </a>
