--- a/კონტაქტი/kont.html
+++ b/კონტაქტი/kont.html
@@ -54,7 +54,7 @@
      <footer class="flex">
             <a href="kont.html">
                 <p >კონტაკტი</p></a>
-                <p class="fb">fb <span class="in">in</span></p>
+                <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="instagram.com"><span class="in">in</span> </a></p>
                 <a href="kont.html">
                 <p>ჩვენ შესახებ</p>
                </a>
