--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="tran">ქარ/ENG</p>
     </nav>
     <section class="video">
-        <iframe width="75.15151515151515%" height="600px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="75.15151515151515%" height="600px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         
     </section>
@@ -43,7 +43,7 @@
      <footer class="flex">
          <a href="კონტაქტი/kont.html">
          <p>კონტაკტი</p></a>
-         <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="instagram.com"><span class="in">in</span> </a></p>
+         <p class="fb"><a href="https://www.facebook.com/artareatv2.0/">fb</a> <a href="https://www.instagram.com/artareatv2.0/"><span class="in">in</span> </a></p>
          <a href="კონტაქტი/kont.html">
          <p>ჩვენ შესახებ</p>
         </a>
