--- a/ბლოგი/blog.html
+++ b/ბლოგი/blog.html
@@ -159,14 +159,14 @@
      
     </section>
      
-     <footer class="flex">
-            <a href="../კონტაქტი/kont.html">
-                <p>კონტაკტი</p></a>
-                <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="instagram.com"><span class="in">in</span> </a></p>
-                <a href="../კონტაქტი/kont.html">
-                <p>ჩვენ შესახებ</p>
-               </a>
+    <footer class="flex">
+        <a href="კონტაქტი/kont.html">
+        <p>კონტაკტი</p></a>
+        <p class="fb"><a href="https://www.facebook.com/artareatv2.0/">fb</a> <a href="https://www.instagram.com/artareatv2.0/"><span class="in">in</span> </a></p>
+        <a href="კონტაქტი/kont.html">
+        <p>ჩვენ შესახებ</p>
+       </a>
 
-     </footer>
+    </footer>
 </body>
 </html>
