--- a/გადაცემები/gada.html
+++ b/გადაცემები/gada.html
@@ -63,47 +63,47 @@
 
 <div class="flex div1">
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
     <div class="container1 " > 
-        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/rhKFkAAgNMM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="260px" height="150px " src="https://www.youtube.com/embed/tHOW_AEQWIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          <p >ქუჩის აკადემია Vol. 1 - დავით მაკარიძე</p>
     </div>
 
@@ -121,15 +121,14 @@
         
     </section>
      
-     <footer class="flex">
-            <a href="../კონტაქტი/kont.html">
-                <p>კონტაკტი</p></a>
-                <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="https://www.instagram.com"><span class="in">in</span> </a></p>
+    <footer class="flex">
+        <a href="კონტაქტი/kont.html">
+        <p>კონტაკტი</p></a>
+        <p class="fb"><a href="https://www.facebook.com/artareatv2.0/">fb</a> <a href="https://www.instagram.com/artareatv2.0/"><span class="in">in</span> </a></p>
+        <a href="კონტაქტი/kont.html">
+        <p>ჩვენ შესახებ</p>
+       </a>
 
-                <a href="../კონტაქტი/kont.html">
-                <p>ჩვენ შესახებ</p>
-               </a>
-
-     </footer>
+    </footer>
 </body>
 </html>
