--- a/კონტაქტი/kont.html
+++ b/კონტაქტი/kont.html
@@ -41,7 +41,7 @@
             <p>ტელეფონი <span class="add"> 2 18 10 38</span></p>
             <p>ელ პოსტა <span class="add"> info@artarea.tv</span></p>
             <p>მისამართი    <span class="add">  დოდო აბაშიძის 10</span></p>
-            <p class="sp"> fb in Tw</p>
+            <p class="sp">  <a href="https://www.facebook.com/artareatv2.0/">fb</a> <a href="https://www.instagram.com/artareatv2.0/">in</a> Tw</p>
 
         </div>
         <div class="map flex">
@@ -51,13 +51,14 @@
     
     </section>
     
-     <footer class="flex">
-            <a href="kont.html">
-                <p >კონტაკტი</p></a>
-                <p class="fb"><a href="https://www.facebook.com/ArtHand2019">fb</a> <a href="instagram.com"><span class="in">in</span> </a></p>
-                <a href="kont.html">
-                <p>ჩვენ შესახებ</p>
-               </a>
-     </footer>
+    <footer class="flex">
+        <a href="კონტაქტი/kont.html">
+        <p>კონტაკტი</p></a>
+        <p class="fb"><a href="https://www.facebook.com/artareatv2.0/">fb</a> <a href="https://www.instagram.com/artareatv2.0/"><span class="in">in</span> </a></p>
+        <a href="კონტაქტი/kont.html">
+        <p>ჩვენ შესახებ</p>
+       </a>
+
+    </footer>
 </body>
 </html>
