--- a/ბლოგი/blog.html
+++ b/ბლოგი/blog.html
@@ -160,10 +160,10 @@
     </section>
      
     <footer class="flex">
-        <a href="კონტაქტი/kont.html">
+        <a href=../კონტაქტი/kont.html">
         <p>კონტაკტი</p></a>
         <p class="fb"><a href="https://www.facebook.com/artareatv2.0/">fb</a> <a href="https://www.instagram.com/artareatv2.0/"><span class="in">in</span> </a></p>
-        <a href="კონტაქტი/kont.html">
+        <a href="../კონტაქტი/kont.html">
         <p>ჩვენ შესახებ</p>
        </a>
 
